fix(MarketView): slider buttons aligned to center

--- a/src/client/App.scss
+++ b/src/client/App.scss
@@ -32,6 +32,8 @@
     width: 384px;
   }
   .marketViewSlickSlider {
+    max-height: 100%;
+
     .item {
       position: relative;
       opacity: 0.2;
@@ -78,7 +80,7 @@
       background: white;
       border-radius: 20px;
       left: 15%;
-      top: 18%;
+      top: 35%;
       z-index: 11;
       &::before {
         font-family: $font-family-qf-icons;
@@ -96,7 +98,7 @@
       background: white;
       border-radius: 20px;
       right: 15%;
-      top: 18%;
+      top: 35%;
       &::before {
         content: '\e922';
         color: $color-black;
